# self-hosted-search-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  agent.py  agent_types.py  cli.py  evaluation.py  evidence_loop.py  example.py  extractor.py  llm.py  main.py  profiles.py  pyproject.toml  receipts.py  requirements.txt  reranker.py  search.cmd  search.py
bench/: latency_breakdown.py  routing_probe.py  stop_table.py
eval_data/: README.md  control_dataset.jsonl  intent_classification_dataset.jsonl  quality_20.jsonl  quality_20_ground_truth.json  quality_smoke.jsonl  replay_control.jsonl  replay_smoke.json  sample_cases.jsonl
eval_data/components/: cheap_passage.jsonl  classify_intent.jsonl  gate_serp.jsonl  route_claim.jsonl  synthesize_answer.jsonl  verify_claim.jsonl
search_agent/: __init__.py  __main__.py  app.py  bootstrap.py  cli.py  evaluation.py  runtime_bootstrap.py  settings.py  tuning.py
searxng/: settings.yml
tests/: test_agent_phase1.py  test_brave_search_parse.py  test_caching_search_gateway.py  test_claim_policy.py  test_entrypoints.py  test_eval_tracking.py  test_evaluation_layer.py  test_extractor_browser_host.py  test_extractor_html.py  test_intelligence_layer.py  test_llm_tasks_layer.py  test_paired_control_cli.py  test_phase3.py  test_profiles_layer.py  test_replay_eval.py  test_scholarly_sources.py  test_search_fallback.py  test_search_gateway_layer.py  test_settings_layer.py  test_source_handlers.py  test_source_priors.py  test_text_heuristics.py  test_tuning.py  test_use_case_layer.py  test_wikipedia_api.py
(+77 files in other folders)
