[project]
name = "self-hosted-search-agent"
version = "0.1.0"
description = "Grounded search assistant: SearXNG + crawl4ai + EvidenceLoop"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "crawl4ai>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
